--- a/sched-app/public/index.html
+++ b/sched-app/public/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <title>UMMS 3rd Year Calendar Generator</title>
+
+    <link rel="icon" type="image/png" href="https://www.umassmed.edu/static/img/favicon.ico">
   </head>
-  
+
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    
+
     <div id="root"></div>
 
   </body>
-  
+
 </html>
